test/errors/parser/syntax_print_invalid_char.ms
print -
// Syntax Error (Line 1, Column 8): Expecting either a terminal or a starting parentheses, instead got token TOKEN_NL.
